2003-01-25  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (WindowProc): minimize problem when minimizing emulator in fullscreen mode and filter is active
	* src/win32/Win32.cpp (updateLayersMenu): added support to enable/disable GB/GBC layers

2003-01-21  Forgotten  <forgotten@users.sourceforge.net>

	* src/elf.cpp (elfReadProgram): added support for DW_FORM_strp
	* src/interframe.cpp: added missing EMMS instructions to GCC inline assembly
	* src/admame.cpp: added missing EMMS instructions to GCC inline assembly

2003-01-20  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (initApp): fixed disable SFX flag not being read

2003-01-18  Forgotten  <forgotten@users.sourceforge.net>

	* src/gb/GB.cpp (gbEmulate): changed interface with emulator for joypad
	* src/GBA.cpp (CPULoop): changed interface with emulator for joypad
	* src/win32/Win32.cpp: added support for multiple joypad configuration

2003-01-14  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (initApp): fixed problem when video mode was never selected

2003-01-13  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp: show detailed speed data
	               added auto frameskip support
	               CTRL+F to toggle fullscreen

2003-01-12  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added some debugging for DDRAW and DINPUT
	* src/win32/Win32.cpp: changed rendering when menu is active with triple buffering

2003-01-11  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPULoop): set emulation speed value
	* src/win32/Win32.cpp: added support for fullscreen speed display
	* src/win32/Win32.cpp: support for triple buffering in fullscreen mode
	* src/gb/GB.cpp (gbEmulate): set emulation speed value
	* src/SDL.cpp: added support for fullscreen speed display

2003-01-08  Forgotten  <forgotten@users.sourceforge.net>
